chaged body width
max-width: max-content;

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- contacts nav -->
     <ul class="contacts">
       <p class="logo header-title">Фенилпирацетам из США</p>
-      <li class="header-link"><a href="mail-to:ph.piracetam.usa@gmail.com" class="link">e-mail: ph.piracetam.usa@gmail.com</a></li>
+      <li class="contacts-item"><a href="mail-to:ph.piracetam.usa@gmail.com" class="link">e-mail: ph.piracetam.usa@gmail.com</a></li>
       <!-- <li><a href="phone-to:" class="link">+38096 111 11 11</a></li> -->
     </ul>
   </header>
