end of the day 17.01.2021

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       -->
     </nav>
     <!-- contacts nav -->
+    <section class="logo-ru">
+    <span class="logo-ru black">Фенилпирацетам</span><span class="logo-ru white">США</span>
+    </section>
     <ul class="contacts">
-      <p class="logo header-title">Фенилпирацетам из США</p>
       <li class="contacts-item"><a href="mail-to:ph.piracetam.usa@gmail.com" class="link">e-mail: ph.piracetam.usa@gmail.com</a></li>
       <!-- <li><a href="phone-to:" class="link">+38096 111 11 11</a></li> -->
     </ul>
