--- a/index.html
+++ b/index.html
@@ -6,76 +6,78 @@
   <title>Фенилпирацетам</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <!-- Body block -->
 <body>
   <!-- Header -->
-  <header>
+  <header class="header-container">
     <nav>
-      <a href="">
         <!-- Logotype -->
-        <section class="logo">
-          <span class="logo white">Phenylpiracetam</span><span class="logo black">USA</span>
-        </section>
-      </a>
-      <!--  
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a href="" class="link">Контакты</a></li>
-      </ul>
-      -->
-    </nav>
+        
     <!-- contacts nav -->
-    <section class="logo-ru">
+    <!-- <span class="logo-ru">
     <span class="logo-ru black">Фенилпирацетам</span><span class="logo-ru white">США</span>
-    </section>
-    <ul class="contacts">
-      <li class="contacts-item"><a href="mail-to:ph.piracetam.usa@gmail.com" class="link">e-mail: ph.piracetam.usa@gmail.com</a></li>
-      <!-- <li><a href="phone-to:" class="link">+38096 111 11 11</a></li> -->
-    </ul>
+    </span> -->
+    <!-- en logo link button -->
+    <span class="contacts usa">
+      <a href="" class="link">Phenylpiracetam USA</a>
+    </span>
+
+    <!-- ru logo link button -->
+    <span class="contacts ru">
+      <a href="" class="link">Фенилпирацетам из США</a>
+    </span>
+
+    <!-- e-mail button -->
+    <span class="contacts e-mail">
+      <a href="mail-to:ph.piracetam.usa@gmail.com" class="link">e-mail: ph.piracetam.usa@gmail.com</a>
+    </span>
+  </nav>
   </header>
+
   <!-- Main block -->
   <main>
+    <div class="main-container">
+      <!-- Description & image   перед публикацией заменить ссылки на фото на URL-->
+      <div class="container">
+          <img src="./imgage/pp-main-photo.webp" alt="фенилпирацетам в капсулах" width="370">
+          <h1 class="title">Что такое фенилпирацетам?</h1>
+            <p class="description">
+      Капсулы фенилпирацетама представляют собой производное ноотропного соединения исходного соединения семейства рацетама, пирацетама.
+    Впервые он был создан в 1983 году группой советских ученых и в последнее время стал более известен по всему миру.
+    Фенилпирацетам отличается от пирацетама добавлением основной фенильной группы в положении 4 в структуре основания 2-пирролидона.
+    Фенильная группа представляет собой шестистороннее циклическое кольцо, состоящее из бензола без водорода, оставляя доступной открытую углеродную связь.
+    Фенилпирацетам плохо растворим в воде, но слабо растворим в жирах. Он имеет молярную массу 218,3 г / моль и молекулярную формулу C12H14N2O2.
+            </p>
+      </div>
 
-    <!-- Description & image   перед публикацией заменить ссылки на фото на URL-->
-    <section class="description">
-        <img src="./img/pp-main-photo.webp" alt="фенилпирацетам в капсулах" width="370">
-        <h1>Что такое фенилпирацетам?</h1>
-          <pre>
-    Капсулы фенилпирацетама представляют собой производное ноотропного соединения исходного соединения семейства рацетама, пирацетама.
-  Впервые он был создан в 1983 году группой советских ученых и в последнее время стал более известен по всему миру.
-  Фенилпирацетам отличается от пирацетама добавлением основной фенильной группы в положении 4 в структуре основания 2-пирролидона.
-  Фенильная группа представляет собой шестистороннее циклическое кольцо, состоящее из бензола без водорода, оставляя доступной открытую углеродную связь.
-  Фенилпирацетам плохо растворим в воде, но слабо растворим в жирах. Он имеет молярную массу 218,3 г / моль и молекулярную формулу C12H14N2O2.
-          </pre>
-    </section>
-
-    <!-- Production place & image -->
-    <section class="production-place">
-      <img src="./img/pp-lab-description.jpg" alt="заключение лаборатории" width="370">
-      <h2>Где производят фенилпирацетам и какого качества?</h2>
-      <pre>
-    Nootropics Depot's Phenylpiracetam Capsules производятся в США и прошли тщательную лабораторную проверку на чистоту и соответствие 
- стандартам качества.
-      </pre>
-    </section>
-    <!-- Ingridients & img -->
-    <section>
-      <img src="./img/pp-description.webp" alt="состав" width="370">
-      <h3>Купить фенилпирацетам в Украине</h3>
-      <!-- Buying items -->
-      <ul>
-        <li>
-          <a href="">Купить фенилпирацетам 30 капсул. 990 грн.</a>
-        </li>
-        <li>
-          <a href="">Купить фенилпирацетам 90 капсул. 2350 грн.</a>
-        </li>
-      </ul>
-    </section>
-  </main>
+      <!-- Production place & image -->
+      <section class="production-place">
+        <img src="./imgage/pp-lab-description.jpg" alt="заключение лаборатории" width="370">
+        <h2 class="title">Где производят фенилпирацетам и какого качества?</h2>
+        <p>
+      Nootropics Depot's Phenylpiracetam Capsules производятся в США и прошли тщательную лабораторную проверку на чистоту и соответствие 
+  стандартам качества.
+        </p>
+      </section>
+      <!-- Ingridients & img -->
+      <section>
+        <img src="./imgage/pp-description.webp" alt="состав" width="370">
+        <h3 class="title">Купить фенилпирацетам в Украине</h3>
+        <!-- Buying items -->
+        <ul>
+          <li>
+            <a href="">Купить фенилпирацетам 30 капсул. 990 грн.</a>
+          </li>
+          <li>
+            <a href="">Купить фенилпирацетам 90 капсул. 2350 грн.</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+</div>
   <!-- Footer -->
   <footer>
 
